--- a/notebooks/perception/02_semantic_segmentation_pipeline.ipynb
+++ b/notebooks/perception/02_semantic_segmentation_pipeline.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import losses, optimizers, mixed_precision\n",
+    "\n",
     "from drivable.data import BDDSemanticSegmentationLoader\n",
     "from drivable.model import build_deeplabv3_plus"
    ]
@@ -14,6 +17,34 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "43afea40-6180-4ec7-9a38-f669bc41fe5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+      "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: Tesla V100-SXM2-16GB, compute capability 7.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+      "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: Tesla V100-SXM2-16GB, compute capability 7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mixed_precision.set_global_policy(\"mixed_float16\")\n",
+    "policy = mixed_precision.global_policy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "eb88d42f-16ff-4475-a77a-220ef57bd0c1",
    "metadata": {},
    "outputs": [
@@ -33,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e787c92d-7cc8-45c4-a6d7-e4cb7eefc110",
    "metadata": {},
    "outputs": [
@@ -539,8 +570,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "153c8372-eb7c-4e13-996b-c10e9ed7998f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "model.compile(\n",
+    "    optimizer=optimizers.Adam(learning_rate=0.001),\n",
+    "    loss=loss,\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b9fe102-6a08-416b-8c37-b8e78971d419",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "296/437 [===================>..........] - ETA: 37s - loss: nan - accuracy: 0.0714"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(train_dataset, validation_data=val_dataset, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "015791f8-17e7-4f76-8d33-43b9d9821ab6",
    "metadata": {},
    "outputs": [],
    "source": []
